--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:accessibility": "playwright test tests/e2e/accessibility.spec.js",
+    "test:performance": "playwright test tests/e2e/performance.spec.js",
+    "test:all": "npm run test && npm run test:e2e"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +53,10 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.1",
+    "@playwright/test": "^1.52.0",
     "autoprefixer": "^10.4.19",
+    "playwright": "^1.52.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   }
